--- a/school-portal/src/main/resources/templates/add/add-class.html
+++ b/school-portal/src/main/resources/templates/add/add-class.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900">
-<link rel="stylesheet" th:href="@{/assets/css/Animation-Cards-_app.css}">
-<link rel="stylesheet" th:href="@{/assets/css/Animation-Cards.css}">
-<link rel="stylesheet" th:href="@{/assets/css/Form-Select---Full-Date---Month-Day-Year.css}">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightpick@1.3.4/css/lightpick.min.css">
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-<link rel="stylesheet" th:href="@{/assets/css/List-Grid-Liste-Gille-hover.css}">
-<link rel="stylesheet" th:href="@{/assets/css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css}">
-<link rel="stylesheet" th:href="@{/assets/css/Navbar-Right-Links-Dark-icons.css}">
-<link rel="stylesheet" th:href="@{/assets/css/Pretty-Registration-Form-.css}">
-<link rel="stylesheet" th:href="@{/assets/css/styles.css}">
-<link rel="stylesheet" th:href="@{/assets/css/untitled.css}">
+<head>
+    <link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900">
+    <link rel="stylesheet" th:href="@{/assets/css/Animation-Cards-_app.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Animation-Cards.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Form-Select---Full-Date---Month-Day-Year.css}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightpick@1.3.4/css/lightpick.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" th:href="@{/assets/css/List-Grid-Liste-Gille-hover.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Navbar-Right-Links-Dark-icons.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Pretty-Registration-Form-.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/untitled.css}">
+</head>
 
 <body style="min-height: 740px;display: flex;flex-direction: column;background: var(--bs-secondary-bg);">
 <nav class="navbar navbar-expand-md mb-4"
      style="background: rgba(35,191,79,0.86);border-bottom-width: 11px;border-bottom-color: var(--bs-primary);display: flex;">
-    <div class="container-fluid"><a class="navbar-brand" href="#"
-                                    style="font-weight: bold;color: #161a1e;font-family: 'Source Sans Pro', sans-serif;">Spring
-        School</a>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+           style="font-weight: bold;color: #161a1e;font-family: 'Source Sans Pro', sans-serif;">Spring School</a>
         <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
                 class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1"><a href="#"
-                                                               style="font-family: 'Source Sans Pro', sans-serif;">Dashboard</a><span
-                class="ms-auto navbar-text"
-                style="font-family: 'Source Sans Pro', sans-serif;">firstName + lastName</span>
+        <div class="collapse navbar-collapse" id="navcol-1">
+            <a href="#" style="font-family: 'Source Sans Pro', sans-serif;">Dashboard</a>
+            <span class="ms-auto navbar-text"
+                  style="font-family: 'Source Sans Pro', sans-serif;">firstName + lastName</span>
             <button class="btn btn-primary ms-4" style="display: flex;" onclick="window.location.href='/logout'">Log
                 out
             </button>
@@ -39,45 +41,56 @@
 <div class="container" style="min-height: 80.9vh;">
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
+            <form class="custom-form" th:action="@{/admin/add-class}" th:object="${classForm}" method="post">
                 <h1>Add a new class</h1>
+                <div th:if="${#fields.hasErrors()}">
+                    <p class="alert alert-danger" role="alert">All fields must be completed.</p>
+                </div>
                 <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">
-                        Subject area</label></div>
+                    <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">Subject
+                        area</label></div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-select" id="name-input-field">
+                        <select class="form-select" th:field="*{subject}">
+                            <option value="" selected disabled>Select a subject area</option>
                             <option th:each="class: ${classes}" th:value="${class}" th:text="${class}"></option>
                         </select>
+                        <div th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}" class="text-danger"></div>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label" for="year-input-field">Year</label>
                     </div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-select" id="year-input-field">
+                        <select class="form-select" th:field="*{year}">
+                            <option value="" selected disabled>Select a year</option>
                             <option th:each="year: ${years}" th:value="${year}" th:text="${year}"></option>
                         </select>
+                        <div th:if="${#fields.hasErrors('year')}" th:errors="*{year}" class="text-danger"></div>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label"
                                                               for="section-input-field">Section</label></div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-select" id="section-input-field">
+                        <select class="form-select" th:field="*{section}">
+                            <option value="" selected disabled>Select a section</option>
                             <option th:each="section: ${sections}" th:value="${section}" th:text="${section}"></option>
                         </select>
+                        <div th:if="${#fields.hasErrors('section')}" th:errors="*{section}" class="text-danger"></div>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label"
                                                               for="tutor-input-field">Tutor</label></div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-select" id="tutor-input-field">
+                        <select class="form-select" th:field="*{tutor}">
+                            <option value="" selected disabled>Select a tutor</option>
                             <option th:each="tutor: ${tutors}" th:value="${tutor}" th:text="${tutor}"></option>
                         </select>
+                        <div th:if="${#fields.hasErrors('tutor')}" th:errors="*{tutor}" class="text-danger"></div>
                     </div>
                 </div>
-                <button class="btn btn-light submit-button" type="button">Submit</button>
+                <button class="btn btn-light submit-button" type="submit">Submit</button>
             </form>
         </div>
     </div>
@@ -94,7 +107,7 @@
                         <div class="bs-icon-circle bs-icon-primary bs-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                                  viewBox="0 0 16 16" class="bi bi-facebook">
-                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.93 2.86 7.19 6.58 7.88v-5.58H4.89V8h1.69V6.27c0-1.67 1.02-2.58 2.51-2.58.71 0 1.32.05 1.5.08v1.74h-1.03c-.81 0-.97.39-.97.96V8h1.94l-.25 2.3h-1.69v5.58C13.14 15.19 16 11.93 16 8c0-4.42-3.58-8-8-8z"></path>
                             </svg>
                         </div>
                     </li>
@@ -102,7 +115,7 @@
                         <div class="bs-icon-circle bs-icon-primary bs-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                                  viewBox="0 0 16 16" class="bi bi-instagram">
-                                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.93 2.86 7.19 6.58 7.88v-5.58H4.89V8h1.69V6.27c0-1.67 1.02-2.58 2.51-2.58.71 0 1.32.05 1.5.08v1.74h-1.03c-.81 0-.97.39-.97.96V8h1.94l-.25 2.3h-1.69v5.58C13.14 15.19 16 11.93 16 8c0-4.42-3.58-8-8-8z"></path>
                             </svg>
                         </div>
                     </li>
