--- a/school-portal/src/main/resources/templates/add/add-class.html
+++ b/school-portal/src/main/resources/templates/add/add-class.html
@@ -30,8 +30,7 @@
                 class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <a href="#" style="font-family: 'Source Sans Pro', sans-serif;">Dashboard</a>
-            <span class="ms-auto navbar-text"
-                  style="font-family: 'Source Sans Pro', sans-serif;">firstName + lastName</span>
+            <span class="ms-auto navbar-text" th:text="${currentUser.firstName} + ' ' + ${currentUser.lastName}" style="font-family: 'Source Sans Pro', sans-serif;"></span>
             <button class="btn btn-primary ms-4" style="display: flex;" onclick="window.location.href='/logout'">Log
                 out
             </button>
