--- a/school-portal/src/main/resources/templates/add/add-teacher.html
+++ b/school-portal/src/main/resources/templates/add/add-teacher.html
@@ -26,9 +26,7 @@
 <body style="min-height: 740px;display: flex;flex-direction: column;background: var(--bs-secondary-bg);">
 <nav class="navbar navbar-expand-md mb-4"
      style="background: rgba(35,191,79,0.86);border-bottom-width: 11px;border-bottom-color: var(--bs-primary);display: flex;">
-    <div class="container-fluid"><a class="navbar-brand" href="#"
-                                    style="font-weight: bold;color: #161a1e;font-family: 'Source Sans Pro', sans-serif;">Spring
-        School</a>
+    <div class="container-fluid"><a class="navbar-brand" href="#" style="font-weight: bold;color: #161a1e;font-family: 'Source Sans Pro', sans-serif;">Spring School</a>
         <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
                 class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1"><a href="#"  style="font-family: 'Source Sans Pro', sans-serif;">Dashboard</a>
