--- a/school-portal/src/main/resources/templates/add/add-teacher.html
+++ b/school-portal/src/main/resources/templates/add/add-teacher.html
@@ -69,6 +69,7 @@
                     </div>
                     <div class="col-sm-6 input-column"><input class="form-control" type="email" th:field="*{email}"></div>
                 </div>
+                <div th:if="${error}"><p class="alert alert-danger" role="alert">Email is already in use.</p></div>
                 <button class="btn btn-light submit-button" type="submit">Submit</button>
             </form>
         </div>
