--- a/school-portal/src/main/resources/templates/class/class-info.html
+++ b/school-portal/src/main/resources/templates/class/class-info.html
@@ -31,7 +31,9 @@
         <div class="col-12 col-sm-6 col-md-6">
             <h3 class="text-dark mb-4">Class <span th:text="${class.year}"/>-<span th:text="${class.section}"/></h3>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 text-end" style="margin-bottom: 30px;"></div>
+        <div class="col-12 col-sm-6 col-md-6 text-end" style="margin-bottom: 30px;">
+                <a class="btn btn-primary" th:href="@{'/admin/add-course/' + ${class.id}}" role="button">Add New Course</a>
+        </div>
     </div>
     <div class="card" id="TableSorterCard">
         <div class="row">
