--- a/school-portal/src/main/resources/templates/update/update-course.html
+++ b/school-portal/src/main/resources/templates/update/update-course.html
@@ -42,6 +42,7 @@
                         <div th:if="${#fields.hasErrors('teachers')}" th:errors="*{teachers}" class="text-danger"></div>
                     </div>
                     <button class="btn btn-light submit-button" type="button">Submit</button>
+                </div>
             </form>
         </div>
     </div>
