--- a/school-portal/src/main/resources/templates/class/class-info.html
+++ b/school-portal/src/main/resources/templates/class/class-info.html
@@ -57,7 +57,7 @@
                             <td th:text="${classCourse.course.teacher.user.firstName}">First Name</td>
                             <td th:text="${classCourse.course.teacher.user.lastName}">Last Name</td>
                             <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
-                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="#">
+                                <a class="btn btnMaterial btn-flat success semicircle" role="button" th:href="@{'/admin/edit-course/' + ${classCourse.course.id}}">
                                     <i class="fas fa-pen"></i>
                                 </a>
                             </td>
